# thingy

./: CHANGELOG.md  README.md  thingy.cabal
src/: Thingy.hs
tests/: Test.hs
