cabal-version:      2.2
name:               thingy
version:            0.1.0.0
maintainer:         andrea@andreabedini.com
author:             Andrea Bedini
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Thingy
    default-language: Haskell2010
    build-depends:    base <= 4.16.0.0
    hs-source-dirs:   src

test-suite test-thingy
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   tests
    default-language: Haskell2010
    build-depends:
        thingy -any,
        base -any,
        checkers -any,
        QuickCheck -any
